tests/sksl/errors/BadIndex.dsl.glsl
### Compilation failed:

error: expected array, but found 'int'

error: expected array, but found 'float'

2 errors
